# libspfclient

./: .gitignore  CMakeLists.txt  README.md  action.h  graph.cpp  graph.h  graph_test.cpp  main.cpp  microservice.h  mock_microservice.h  web_socket_microservice.cpp  web_socket_microservice.h
include/spf/: error.h  graph.h  microservice.h  rpc.h  types.h  web_socket_microservice.h  web_socket_rpc.h
src/: action.h  graph.cpp  graph_test.cpp  main.cpp  mock_microservice.h  mock_rpc.h  web_socket_microservice.cpp  web_socket_rpc.cpp
